--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,8 +10,6 @@ body{
     width: 100%;
     display: flex;
     align-items: center;
-    /* height: 100%; */
-    opacity: 0.9; 
     justify-content: center;
     padding: 80px 0;
     background-image: url(./images/FoodAndDrinkDesign.svg);
@@ -23,6 +21,7 @@ body{
     width: 90%;
     height: auto;
     max-width: 1200px;
+
 }
 #logo{
     text-align: center;
@@ -128,6 +127,12 @@ li span{
 }
 h2{
     padding: 10px 0;
+}
+
+#image-holder{
+    background-position: center;
+    background-size: cover;
+    border: 5px;
 }
 /* Responsiveness */
 @media only screen and (max-width: 765px){
